--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,6 @@
+---
+import "../styles/global.css";
+---
 <!doctype html>
 <html lang="en">
 	<head>
@@ -12,6 +15,8 @@
 		<slot />
 	</body>
 </html>
+
+
 
 <style>
 	html,
