--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,17 +1,28 @@
 ---
 import "../styles/global.css";
+import LanguageSelector from '../components/LanguageSelector';
+
+interface Props {
+	title: string;
+}
+
+const { title } = Astro.props;
 ---
+
 <!doctype html>
-<html lang="en">
+<html lang="de">
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="description" content="Leben in Deutschland Test Training" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="icon" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>{title}</title>
 	</head>
 	<body>
+		<div class="fixed top-4 right-4 z-50">
+			<LanguageSelector client:idle />
+		</div>
 		<slot />
 	</body>
 </html>
