--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,14 @@
 ---
 // Root redirect
+const base = import.meta.env.BASE_URL;
+const target = `${base}de/`; 
+// Ensure we don't end up with //de/ if base is / (though unlikely in this config)
+// Actually standard join is safer:
+const redirectUrl = base.endsWith('/') ? `${base}de/` : `${base}/de/`;
 ---
 
-<script is:inline>
-  // Strictly redirect to German version
-  window.location.href = `/de/`;
+<script is:inline define:vars={{ redirectUrl }}>
+  window.location.href = redirectUrl;
 </script>
 
-<meta http-equiv="refresh" content={`0;url=/de/`} />
+<meta http-equiv="refresh" content={`0;url=${redirectUrl}`} />
