--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -10,7 +10,7 @@ export function getStaticPaths() {
   return supportedLangs.map(lang => ({ params: { lang }, props: { lang } }));
 }
 
-const { lang } = Astro.props;
+const { lang } = Astro.params;
 const t = useTranslations(lang as any);
 import Header from '../../components/Header.astro';
 import { getPath } from '../../utils/navigation';
